--- a/playbooks/roles/solana_validator_bootstrap/tasks/copy_scripts.yaml
+++ b/playbooks/roles/solana_validator_bootstrap/tasks/copy_scripts.yaml
@@ -19,3 +19,14 @@
   when: jito_enable
   tags:
     - copy.scripts
+
+- name: Create Jito build script
+  copy:
+    src: kpd_build-jito.sh
+    dest: /home/solana/kpd_build-jito.sh
+    mode: 0755
+    owner: solana
+    group: solana
+  when: jito_enable
+  tags:
+    - copy.scripts
