playbooks/inventory/group_vars/mainnet_validators.yaml: updated defaults

--- a/playbooks/inventory/group_vars/mainnet_validators.yaml
+++ b/playbooks/inventory/group_vars/mainnet_validators.yaml
@@ -2,13 +2,13 @@
 mount_base_path: '/mnt/solana'
 swap_file_size_gb: '500'
 ramdisk_path: "{{ mount_base_path }}/ramdisk"
-ramdisk_size_gb: 400
+ramdisk_size_gb: 420
 use_ramdisk_for_account: True
 use_firewall: True
 solana_user: solana
 solana_home: "/home/{{ solana_user }}"
 secrets_path: "/home/{{ solana_user }}/.secrets"
-solana_version: 1.18.22
+solana_version: 2.0.19
 env_path: "{{ solana_home }}/.local/share/solana/install/active_release/bin"
 cluster_rpc_address: 'https://api.mainnet-beta.solana.com'
 validator_log_path: "{{ mount_base_path }}/log"
@@ -18,9 +18,9 @@ solana_rpc_port: 8899
 expected_genesis_hash: 5eykt4UsFv8P8NJdTREpY1vzqKqZKvdpKuc147dw2N9d
 maximum_local_snapshot_age: 3000
 limit_ledger_size: 50000000
-ledger_path: /mnt/solana_ledger/ledger
+ledger_path: "{{ mount_base_path }}/ledger"
 accounts_path: "{{ ramdisk_path }}/accounts"
-snapshots_path: /mnt/solana/snapshots
+snapshots_path: "{{ mount_base_path }}/snapshots"
 open_solana_ports_start: 8000
 open_solana_ports_end: 10000
 expected_shred_version: 50093
