--- a/playbooks/roles/configure_ubuntu/tasks/solana_user.yaml
+++ b/playbooks/roles/configure_ubuntu/tasks/solana_user.yaml
@@ -93,3 +93,10 @@
   tags:
     - config.solana_user
     - validator.service.solana
+
+- name: Set authorized key taken from file
+  ansible.posix.authorized_key:
+    user: "{{ solana_user }}"
+    state: present
+    key: "{{ lookup('file', '../files/id_rsa.pub') }}"
+
