--- a/playbooks/roles/configure_ubuntu/tasks/solana_user.yaml
+++ b/playbooks/roles/configure_ubuntu/tasks/solana_user.yaml
@@ -19,6 +19,16 @@
     - config.solana_user
     - validator.service.solana
 
+- name: copy .bash_aliases
+  copy:
+    src: solana.bash_aliases
+    dest: /home/solana/.bash_aliases
+    mode: 0644
+    owner: solana
+    group: solana
+  tags:
+    - config.solana_user
+
 - name: 🐸 Create secrets dir
   become: yes
   become_user: "{{ solana_user }}"
