--- a/playbooks/inventory/group_vars/mainnet_validators.yaml
+++ b/playbooks/inventory/group_vars/mainnet_validators.yaml
@@ -42,6 +42,7 @@ known_validators:
 jito_enable: false
 jito_block_engine_url:
 jito_relayer_url:
+jito_bam_url:
 jito_receiver_addr:
 jito_tip_payment_program_pubkey:
 jito_distribution_program_pubkey:
