--- a/playbooks/inventory/group_vars/testnet_validators.yaml
+++ b/playbooks/inventory/group_vars/testnet_validators.yaml
@@ -38,6 +38,7 @@ known_validators:
 jito_enable: false
 jito_block_engin_url:
 jito_relayer_url:
+jito_bam_url:
 jito_receiver_addr:
 jito_tip_payment_program_pubkey:
 jito_distribution_program_pubkey:
